--- a/assets/css/navbar-logo.css
+++ b/assets/css/navbar-logo.css
@@ -1,7 +1,7 @@
 
 .navbar-logo {
-    height: 4px;      /* Passe die Höhe nach Wunsch an */
+    height: 30px;      /* Passe die Höhe nach Wunsch an */
     width: auto;
-
+    object-fit: contain;
     vertical-align: middle;
 }
